# euclid

./: .gitignore  Cargo.toml  PoliticalEconomy.txt  PoliticalEconomy_truncated.txt  README.md  dataset.db  embeddings_10.csv  embeddings_20.csv  flake.nix  table.csv
euclidcli/: Cargo.toml  README.md  flake.nix
euclidcli/src/: main.rs
euclidcli/src/cli/: dataset.rs  mod.rs  tokenizer.rs
euclidlib/: Cargo.toml  README.md  flake.nix
euclidlib/src/: alloc.rs  lib.rs  main.rs  token.rs
euclidlib/src/database/: raw_dataset.rs
euclidlib/src/encoder_decoder/: mod.rs
euclidlib/src/lstm_generator/: generic_model.rs  mod.rs  sized_model.rs
euclidlib/src/neural_network/: activations.rs  backpropagation.rs  layer.rs  losses.rs  lstm_cell.rs  mod.rs  network.rs  neuron.rs
euclidlib/src/neural_network/device/: cpu.rs  dynamic.rs  gpu.rs  mod.rs
euclidlib/src/neural_network/float/: f32.rs  f64.rs  mod.rs
euclidlib/src/neural_network/float/qf8/: mod.rs  qf8_16_1_type.rs  qf8_1_type.rs  qf8_2_1_type.rs  qf8_4_1_type.rs  qf8_4_type.rs  qf8_8_1_type.rs  qf8_8_type.rs
euclidlib/src/neural_network/lstm/: cell.rs  layer.rs  mod.rs
euclidlib/src/tokenizer/: generic_model.rs  mod.rs  model.rs  sized_model.rs
euclidlib/src/tokenizer/database/: documents.rs  mod.rs  tokens.rs
src/: document.rs  instruction.rs  main.rs
src/database/: instructed_dataset.rs  mod.rs  tokens.rs
src/neural_network/: backpropagation.rs  layer.rs  mod.rs  network.rs  neuron.rs
src/neural_network/float/: f32.rs  f64.rs  mod.rs
src/neural_network/float/qf8/: mod.rs  qf8_16_2_type.rs  qf8_16_type.rs  qf8_1_type.rs  qf8_2_type.rs  qf8_4_2_type.rs  qf8_8_2_type.rs  qf8_8_type.rs
src/tokenizer/: mod.rs  model.rs  parser.rs
