[package]
name = "mnlf"
version = "0.1.0"
description = "Micro Natural Language Framework"
authors = ["Nikita Podvirnyi <krypt0nn@vk.com>"]
homepage = "https://github.com/krypt0nn/mnlf"
repository = "https://github.com/krypt0nn/mnlf"
license = "MIT"
edition = "2021"

[profile.dev]
opt-level = 1

[profile.release]
opt-level = 3
lto = "fat"
strip = true

[dependencies]
rusqlite = { version = "0.33", features = ["bundled", "blob"] }
fastrand = "2.2"
anyhow = "1.0"
