[package]
name = "euclid"
version = "0.1.0"
description = "Euclid CLI: Stupid Natural Language Framework CLI toolkit"
authors = ["Nikita Podvirnyi <krypt0nn@vk.com>"]
homepage = "https://github.com/krypt0nn/euclid"
repository = "https://github.com/krypt0nn/euclid"
license = "GPL-3.0"
edition = "2021"

[profile.dev]
opt-level = 1

[profile.release]
opt-level = 3
lto = "fat"
strip = true

[dependencies]
euclidlib = { path = "../euclidlib" }

anyhow = "1.0"
