[package]
name = "euclid"
version = "0.1.0"
description = "Euclid CLI: Stupid Natural Language Framework CLI toolkit"
authors = ["Nikita Podvirnyi <krypt0nn@vk.com>"]
homepage = "https://github.com/krypt0nn/euclid"
repository = "https://github.com/krypt0nn/euclid"
license = "GPL-3.0"
edition = "2021"

[dependencies]
euclidlib = { path = "../euclidlib" }

clap = { version = "4.5", features = ["derive"] }
colorful = "0.3.2"
anyhow = "1.0"
