[package]
name = "euclidlib"
version = "0.1.0"
description = "Euclid: Stupid Natural Language Framework"
authors = ["Nikita Podvirnyi <krypt0nn@vk.com>"]
homepage = "https://github.com/krypt0nn/euclid"
repository = "https://github.com/krypt0nn/euclid"
license = "GPL-3.0"
edition = "2021"

[dependencies]
rusqlite = { version = "0.33", features = ["bundled", "blob"] }
anyhow = "1.0"
fastrand = "2.2"
lz4_flex = "0.11"
